añadido botón de actualizar al nuevo editor

--- a/index.html
+++ b/index.html
@@ -328,6 +328,16 @@
                         <span>Chat IA</span>
                     </button>
                 </div>
+
+                <div style="height: 5vh;"></div>
+
+                <div class="toolbar-group">
+                  <a href="new.inlinked.html" style="text-decoration: none;">
+                  <button class="format-btn" id="toggle-chat" title="Nuevo editor." >
+                      <span>Actualizar el editor</span>
+                  </button>
+                </a>
+              </div>
               </div>
             </div>
           </div>
