--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     <link href="estilos.css" rel="stylesheet" />
     <link rel="stylesheet" href="sidebar.css">
     <link rel="stylesheet" href="ai.css">
+    <link rel="stylesheet" href="aipowered.css">
 
      <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -413,6 +414,10 @@
         </section>
 </div>
 </div>
+<div class="floating-card">
+        <img src="https://new.inled.es/upload/inledai.svg" alt="Inled AI Icon" class="floating-card-icon">
+        <a href="https://ai.inled.es" class="floating-card-text" style="text-decoration: none;">Funciona gracias a Inled AI</a>
+    </div>
 </body>
 <script src="/js/ai.js" module></script>
 </html>
