--- a/new.inlinked.html
+++ b/new.inlinked.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="sidebar.css">
     <link rel="stylesheet" href="ai.css">
+    <link rel="stylesheet" href="aipowered.css">
     <script src="/js/new.ai.js" module></script>
     <style>
       html, body {
@@ -139,7 +140,10 @@
                 </div>
             </div>
         </div>
-
+<div class="floating-card">
+        <img src="https://new.inled.es/upload/inledai.svg" alt="Inled AI Icon" class="floating-card-icon">
+        <a href="https://ai.inled.es" class="floating-card-text" style="text-decoration: none;">Funciona gracias a Inled AI</a>
+    </div>
         <footer class="footer">
             <p>Inled Group 2025. Licenciado bajo GNU GPLv3.0</p>
         </footer>
