--- a/new.inlinked.html
+++ b/new.inlinked.html
@@ -141,7 +141,7 @@
             </div>
         </div>
 <div class="floating-card">
-        <img src="https://new.inled.es/upload/inledai.svg" alt="Inled AI Icon" class="floating-card-icon">
+        <img src="https://inled.es/upload/inledai.svg" alt="Inled AI Icon" class="floating-card-icon">
         <a href="https://ai.inled.es" class="floating-card-text" style="text-decoration: none;">Funciona gracias a Inled AI</a>
     </div>
         <footer class="footer">
